--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link href="/main.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Elsie:900|Inconsolata:700" rel="stylesheet"> 
+  <link href="./assets-css/killkistkreydy.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Elsie:900|Inconsolata:700" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
   <title>Toyah Webb - Two Poems</title>
 </head>
 <body>
   <div id="app"></div>
-
+  <script src="./assets-scripts/killkistkreydy.js"></script>
   <script src="/bundle.js"></script>
 </body>
 </html>
