--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,6 +5,7 @@
   <link href="./assets-css/reset.css" type="text/css" rel="stylesheet">
   <link href="./assets-css/main.css" type="text/css" rel="stylesheet">
   <link href="./assets-css/killkistkreydy.css" rel="stylesheet" type="text/css">
+  <link href="./assets-css/ragged-robin.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Elsie:900|Inconsolata:700" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
